@@ -1,4 +1,9 @@
 
+2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobcinfo.sh: use exported COBC/COBCRUN instead of relying on
+	  exported PATH
+
 2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* gnucobol.texi: explained use of cob_tidy / cob_stop_run
